singe product page finished

--- a/HTML/Kontakt.html
+++ b/HTML/Kontakt.html
@@ -44,7 +44,7 @@
             </div>
         </div>
     </div>
-    <form  onsubmit="formmessage()">
+    <form onsubmit="formmessage()">
         <div class="formcontainer">
             <div class="inputcontainer">
                 <div>
@@ -93,41 +93,40 @@
         </div>
 
     </form>
-    <footer>
-        <div class="background-circle">
-            <a href="index.html">
-                <img class="footerlogo" src="../Images/Logo.png">
-            </a>
-        </div>
-        <div class="footertext"></div>
-        <p> &copy; 2022 Schuber, Inc. <br>
-            </div>
-        <div class="footer-container" id="navigation-container">
-            <a href="privacy.html" class="footer-item">DATENSCHUTZRICHTLINIE</a>
-            <a href="#" class="footer-item">NUTZUNGSBEDINGUNGEN</a>
-            <a href="#" class="footer-item">COOKIE-RICHTLINIE</a>
-            <a href="#" class="footer-item">FIRMENINFORMATIONEN</a>
-        </div>
-
-        <div class="footer-container" id="navigation-container">
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="blank">
-                <ion-icon class="footer-item" name="logo-youtube"></ion-icon>
-            </a>
-            <a href="https://twitter.com/rickastley" target="blank">
-                <ion-icon href="#" class="footer-item" name="logo-twitter"></ion-icon>
-            </a>
-            <a href="https://www.facebook.com/RickAstley" target="blank">
-                <ion-icon href="#" class="footer-item" name="logo-facebook"></ion-icon>
-            </a>
-            <a href="https://www.instagram.com/officialrickastley/" target="blank">
-                <ion-icon href="#" class="footer-item" name="logo-instagram"></ion-icon>
-            </a>
-            <a href="https://www.reddit.com/user/ReallyRickAstley/" target="blank">
-                <ion-icon href="#" class="footer-item" name="logo-reddit"></ion-icon>
-            </a>
-        </div>
-    </footer>
-
 </body>
+<footer>
+    <div class="background-circle">
+        <a href="index.html">
+            <img class="footerlogo" src="../Images/Logo.png">
+        </a>
+    </div>
+    <div class="footertext"></div>
+    <p> &copy; 2022 Schuber, Inc. <br>
+        </div>
+    <div class="footer-container">
+        <a href="privacy.html" class="footer-item">DATENSCHUTZRICHTLINIE</a>
+        <a href="#" class="footer-item">NUTZUNGSBEDINGUNGEN</a>
+        <a href="#" class="footer-item">COOKIE-RICHTLINIE</a>
+        <a href="#" class="footer-item">FIRMENINFORMATIONEN</a>
+    </div>
+
+    <div class="footer-container">
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="blank">
+            <ion-icon class="footer-item" name="logo-youtube"></ion-icon>
+        </a>
+        <a href="https://twitter.com/rickastley" target="blank">
+            <ion-icon href="#" class="footer-item" name="logo-twitter"></ion-icon>
+        </a>
+        <a href="https://www.facebook.com/RickAstley" target="blank">
+            <ion-icon href="#" class="footer-item" name="logo-facebook"></ion-icon>
+        </a>
+        <a href="https://www.instagram.com/officialrickastley/" target="blank">
+            <ion-icon href="#" class="footer-item" name="logo-instagram"></ion-icon>
+        </a>
+        <a href="https://www.reddit.com/user/ReallyRickAstley/" target="blank">
+            <ion-icon href="#" class="footer-item" name="logo-reddit"></ion-icon>
+        </a>
+    </div>
+</footer>
 
 </html>
