--- a/HTML/Product_Samuel.html
+++ b/HTML/Product_Samuel.html
@@ -8,14 +8,10 @@
         <script src="../Scripts/script.js"></script>
         <script src="../Scripts/fontA.js"></script>
         <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-        <title>Produkte & Dienstleistungen</title>
         <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet'>
+        <title>Produkte & Dienstleistungen</title>
     </head>
     <body>
-        <div class="gototopcontainer">
-            <div class="gototopbtn" onclick="gototop()" id="gototopbtn"><i class="fa fa-arrow-up"></i></div>
-        </div>
-
         <div class="navigation-container" id="navigation-container">
             <a href="index.html" class="navigation-item">Startseite</a>
             <a href="Über uns.html" class="navigation-item">Über uns</a>
@@ -23,6 +19,42 @@
             <a href="Team.html" class="navigation-item">Team</a>
             <a href="Kontakt.html" class="navigation-item">Kontakt</a>
             <img style="margin-left: auto;" src="../Images/Logo.png">
+        </div>
+        <div class="buttoncontainer">
+                <button><ion-icon name="cart-outline" style="font-size: 20px;"></ion-icon> Zum Warenkorb</button>
+                <button>Zur Kasse</button=>         
+        </div>
+        <h1 class="center"style="font-family: pacifico;">Samuel</h1>
+        <hr>
+        <div class="productcontainer">
+            <img src="../Images/Samuel.jpg" alt="Schuber Samuel">
+            <div>
+                <div>
+                    <div style="margin-right: 50px;">
+                        Preis: 
+                        <br>
+                        <br>
+                        Montage:
+                        <br>
+                        <br>
+                        SmartSchuber&trade;:
+                        <br><br>
+                    </div>
+                    <div>
+                        499.-
+                        <br>
+                        <br>
+                        Freistehend
+                        <br><br>
+                        Ja 
+                        <br><br>
+                    </div>
+                </div>
+                <div class="productcontainerexception">
+                    <p>Geniessen Sie das Fabelhafte Desing von Samuel, welches durch jahrelange Erfahrung gesammelt wurde.</p>
+                    <button class="cart"><ion-icon name="cart-outline"></ion-icon></button>
+                </div>
+            </div> 
         </div>
     </body>
     <footer>
