--- a/HTML/Team.html
+++ b/HTML/Team.html
@@ -1,128 +1,131 @@
 <!DOCTYPE html>
-<html lang="en">
 
+<html lang="en">   
 <head>
-    <meta charset="uft-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="../Styles/style.css">
+    <meta charset="uft-8">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">    <link rel="stylesheet" href="../Styles/style.css">
+
     <script src="../Scripts/script.js"></script>
     <script src="../Scripts/fontA.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <title>Produkte & Dienstleistungen</title>
-</head>
-<body>
-    <div class="gototopcontainer">
-        <div class="gototopbtn" onclick="gototop()" id="gototopbtn"><i class="fa fa-arrow-up"></i></div>
-    </div>
 
-    <div class="navigation-container" id="navigation-container">
-        <a href="index.html" class="navigation-item">Startseite</a>
-        <a href="Über uns.html" class="navigation-item">Über uns</a>
-        <a href="Produkte & Dienstleistungen.html" class="navigation-item">Produkte & Dienstleistungen</a>
-        <a href="#" class="navigation-item">Team</a>
-        <a href="Kontakt.html" class="navigation-item">Kontakt</a>
-        <img style="margin-left: auto;" src="../Images/Logo.png">
-    </div>
+    </head>
+    <body>
+        <div class="gototopcontainer">
+            <div class="gototopbtn" onclick="gototop()" id="gototopbtn"><i class="fa fa-arrow-up"></i></div>
 
-    <h1 class="center">Organisation Schuber Lampen</h1>
-    <hr>
-    <br>
-    <div class="teamcontainer">
-        <div class="teamitem">
-            <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
-            <div>
-                <h1>Thomas H&ouml;chli</h1>
-                CEO Schuber Lampen
-            </div>
-        </div>
-        <div class="teamitem">
-            <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
-            <div>
-                <h1>Silvio Muri</h1>
-                Leiter Administartion
-            </div>
-        </div>
-        <div class="teamitem">
-            <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
-            <div>
-                <h1>Fabian Steffen</h1>
-                Leiter Herstellung
-            </div>
-        </div>
-        <div class="teamitem">
-            <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
-            <div>
-                <h1>Peter Schaller</h1>
-                Leiter Vertrieb
-            </div>
-        </div>
-        <div class="teamitem" >
-            <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
-            <div>
-                <h1>Aninna Moor</h1>
-                Desing & Entwicklung
-            </div>
-        </div>
-    </div>
+        </div>    <div class="navigation-container" id="navigation-container">
 
-    <h1 class="center">Organisation Schuber Holding</h1>
-    <hr>
-    <br>
-    <div class="teamcontainer">
-        <div class="teamitem">
-            <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
-            <div>
-                <h1>Thomas Mattmann</h1>
-                CEO Schuber Holding
-            </div>
-        </div>
+            <a href="index.html" class="navigation-item">Startseite</a>
+            <a href="Über uns.html" class="navigation-item">Über uns</a>
+            <a href="Produkte & Dienstleistungen.html" class="navigation-item">Produkte & Dienstleistungen</a>
+            <a href="#" class="navigation-item">Team</a>
+            <a href="Kontakt.html" class="navigation-item">Kontakt</a>
+            <img style="margin-left: auto;" src="../Images/Logo.png">
 
-        <div class="teamitem">
-            <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
-            <div>
-                <h1>Stefen Kreier</h1>
-                CEO Schuber Holding
-            </div>
-        </div>
+        </div>    <h1 class="center">Organisation Schuber Lampen</h1>
 
-        <div class="teamitem">
-            <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
-            <div>
-                <h1>Thomans H&ouml;li</h1>
-                Ceo Schuber Lampen
+        <hr>
+        <br>
+        <div class="teamcontainer">
+            <div class="teamitem">
+                <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
+                <div>
+                    <h1>Thomas H&ouml;chli</h1>
+                    CEO Schuber Lampen
+                </div>
+            </div>
+            <div class="teamitem">
+                <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
+                <div>
+                    <h1>Silvio Muri</h1>
+                    Leiter Administartion
+                </div>
+            </div>
+            <div class="teamitem">
+                <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
+                <div>
+                    <h1>Fabian Steffen</h1>
+                    Leiter Herstellung
+                </div>
+            </div>
+            <div class="teamitem">
+                <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
+                <div>
+                    <h1>Peter Schaller</h1>
+                    Leiter Vertrieb
+                </div>
+            </div>
+            <div class="teamitem">
+                <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
+                <div>
+                    <h1>Aninna Moor</h1>
+                    Desing & Entwicklung
+                </div>
             </div>
         </div>
+        <h1 class="center">Organisation Schuber Holding</h1>
 
-        <div class="teamitem">
-            <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
-            <div>
-                <h1>Silvia Gerber</h1>
-                Ceo Schuber Garten
+        <hr>
+        <br>
+        <div class="teamcontainer">
+            <div class="teamitem">
+                <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
+                <div>
+                    <h1>Thomas Mattmann</h1>
+                    CEO Schuber Holding
+                </div>
+            </div>
+            <div class="teamitem">
+
+                <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
+                <div>
+                    <h1>Stefen Kreier</h1>
+                    CEO Schuber Holding
+                </div>
+            </div>
+            <div class="teamitem">
+
+                <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
+                <div>
+                    <h1>Thomans H&ouml;li</h1>
+                    Ceo Schuber Lampen
+                </div>
+            </div>
+            <div class="teamitem">
+
+                <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
+                <div>
+                    <h1>Silvia Gerber</h1>
+                    Ceo Schuber Garten
+                </div>
+            </div>
+            <div class="teamitem">
+                <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
+                <div>
+                    <h1>Fabian Jenni</h1>
+                    Ceo Schuber Schlaff
+                </div>
+            </div>
+            <div class="teamitem">
+                <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
+                <div>
+                    <h1>Kurt Vonaltburg</h1>
+                    Ceo Schuber K&uuml;chenbau
+                </div>
+            </div>
+            <div class="teamitem">
+                <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
+                <div>
+                    <h1>Marianna Egli</h1>
+                    Ceo Schuber Aufbewahrung
+                </div>
             </div>
         </div>
-        <div class="teamitem">
-            <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
-            <div>
-                <h1>Fabian Jenni</h1>
-                Ceo Schuber Schlaff
-            </div>
-        </div>
-        <div class="teamitem">
-            <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
-            <div>
-                <h1>Kurt Vonaltburg</h1>
-                Ceo Schuber K&uuml;chenbau
-            </div>
-        </div>
-        <div class="teamitem" >
-            <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
-            <div>
-                <h1>Marianna Egli</h1>
-                Ceo Schuber Aufbewahrung
-            </div>
-        </div>
-    </div>
+    </body>
     <footer>
         <div class="background-circle">
             <a href="index.html">
@@ -132,14 +135,14 @@
         <div class="footertext"></div>
         <p> &copy; 2022 Schuber, Inc. <br>
             </div>
-        <div class="footer-container" id="navigation-container">
+        <div class="footer-container">
             <a href="privacy.html" class="footer-item">DATENSCHUTZRICHTLINIE</a>
             <a href="#" class="footer-item">NUTZUNGSBEDINGUNGEN</a>
             <a href="#" class="footer-item">COOKIE-RICHTLINIE</a>
             <a href="#" class="footer-item">FIRMENINFORMATIONEN</a>
-        </div>
 
-        <div class="footer-container" id="navigation-container">
+        </div>    <div class="footer-container">
+
             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="blank">
                 <ion-icon class="footer-item" name="logo-youtube"></ion-icon>
             </a>
@@ -157,6 +160,4 @@
             </a>
         </div>
     </footer>
-
-</body>
 </html>
